unpackaged/main/default/objects/Catalogue_fournisseur__c/Catalogue_fournisseur__c.object-meta.xml
<CustomObject>
    <label>Catalogue fournisseur</label>
    <nameField>
        <displayFormat>CAT-{YYYY}-{00000}</displayFormat>
        <label>Numéro du Catalogue fournisseur</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalogues fournisseur</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>