unpackaged/main/default/objects/Catalogue_fournisseur__c/fields/Fabricant__c.field-meta.xml
<CustomField>
    <fullName>Fabricant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Permet d&#39;indiquer le fabricant des produits dans le cas d&#39;un revendeur indépendant.
(Ex : Vendeur de pièce détaché Renault et Iveco, alors indiquez ici le nom du fabricant).</inlineHelpText>
    <label>Fabricant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Catalogues fournisseur (Compte)</relationshipLabel>
    <relationshipName>Catalogues_fournisseur1</relationshipName>
    <type>Lookup</type>
</CustomField>