unpackaged/main/default/objects/Catalogue_fournisseur__c/fields/Famille__c.field-meta.xml
<CustomField>
    <fullName>Famille__c</fullName>
    <formula>TEXT(Reference_famille__r.Famille__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Famille</label>
    <type>Text</type>
</CustomField>