unpackaged/main/default/objects/Catalogue_fournisseur__c/fields/Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Fournisseur__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Fournisseur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Catalogues fournisseur</relationshipLabel>
    <relationshipName>Catalogues_fournisseur</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>