unpackaged/main/default/objects/Catalogue_fournisseur__c/fields/Reference_famille__c.field-meta.xml
<CustomField>
    <fullName>Reference_famille__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Référence famille</label>
    <referenceTo>Famille__c</referenceTo>
    <relationshipLabel>Catalogues fournisseur</relationshipLabel>
    <relationshipName>Catalogues_fournisseur</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>